# garnish-web-server

./: Cargo.toml
pages/: index.garnish
pages/about/: index.garnish
pages/css/: main.css.garnish
src/: args.rs  context.rs  main.rs
