[package]
name = "garnish-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.147", features = ["derive"] }
hypertext-garnish = { path = "../hypertext-garnish"}
serde-garnish = { path = "../serde-garnish"}
garnish_lang_runtime = { path = "../garnish-core/runtime"}
garnish_lang_compiler = { path = "../garnish-core/compiler"}
garnish_data = { path = "../garnish-core/data"}
garnish_traits = { path = "../garnish-core/traits"}
