[package]
name = "garnish-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "4.1.0"
axum = "0.6.18"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
glob = "0.3.1"
clap = { version = "4.2.7", features = ["derive", "env"] }
serde = { version = "1.0.147", features = ["derive"] }
hypertext_garnish = { path = "../hypertext-garnish"}
garnish_lang_annotations_collector = { path = "../garnish-annotations-collector" }
garnish_utils = { path = "../garnish-utils"}
serde_garnish = { path = "../serde-garnish" }
garnish_lang_runtime = { path = "../garnish-core/runtime"}
garnish_lang_compiler = { path = "../garnish-core/compiler"}
garnish_lang_simple_data = { path = "../garnish-core/data"}
garnish_lang_traits = { path = "../garnish-core/traits"}
