[package]
name = "garnish-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "4.1.0"
axum = "0.6.18"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
glob = "0.3.1"
clap = { version = "4.2.7", features = ["derive", "env"] }
serde = { version = "1.0.147", features = ["derive"] }
hypertext_garnish = "0.2.0"
garnish_lang_annotations_collector = "0.3.0"
garnish_lang_utilities = "0.3.0"
serde_garnish = "0.2.0"
garnish_lang = "0.0.4-alpha"
